# dependency_news

./: .gitignore  README.md  pyproject.toml
dependency_news/: repos.json  test_scraping.py
dependency_repo/: huggingface_transformers.md  lightning-ai_pytorch-lightning.md  pytorch_pytorch.md
